--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<head>
+	<meta name="referrer" content="no-referrer" />
+</head>
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
     height: 35px;
